<resources>
    <string name="app_name">Messenger</string>
    <string name="email">Email</string>
    <string name="send_msg">Send Message</string>
    <string name="call">Call</string>
    <string name="phone">Phone Number</string>
    <string name="subject">Subject</string>
    <string name="body">Write Content</string>
    <string name="send">Send</string>
    <string name="header_call">Make a Call</string>
    <string name="header_mail">Write Email</string>
    <string name="header_sms">Write Message</string>

</resources>