<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:background="@drawable/textview_border"
        android:paddingStart="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/body"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/subject"
        app:layout_constraintStart_toStartOf="@+id/subject"
        app:layout_constraintTop_toBottomOf="@+id/subject"
        android:background="@drawable/textview_border"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="@+id/message"
        app:layout_constraintStart_toStartOf="@+id/message"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/header_mail"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>