<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="sendMessage"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="@+id/editMessage"
        app:layout_constraintStart_toStartOf="@+id/editMessage"
        app:layout_constraintTop_toBottomOf="@+id/editMessage" />

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/header_sms"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMessage"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/header_sms"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editNumber"
        app:layout_constraintStart_toStartOf="@+id/editNumber"
        app:layout_constraintTop_toBottomOf="@+id/editNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>